# gwen

./: .commitlintrc.json  .gitignore  .oxfmtrc.json  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  oxlint.json  package.json  pnpm-lock.yaml  release-please-config.json  tsconfig.base.json  tsconfig.json  verdaccio.yaml
.github/actions/setup-node-pnpm/: action.yml
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
crates/gwen-core/: Cargo.toml
crates/gwen-core/benches/: transform_bench.rs
crates/gwen-core/src/: allocator.rs  bindings.rs  build_tools.rs  bulk_ops.rs  bulk_ops_physics2d.rs  bulk_ops_physics3d.rs  events.rs  gameloop.rs  lib.rs  transform.rs  transform_math.rs
crates/gwen-core/src/ecs/: archetype.rs  archetype_graph.rs  bitset.rs  component.rs  dirty_set.rs  entity.rs  mod.rs  query.rs  storage.rs
crates/gwen-core/src/physics2d/: components.rs  events.rs  mod.rs  pathfinding.rs  world.rs
crates/gwen-core/src/physics3d/: components.rs  events.rs  mod.rs  pathfinding.rs  world.rs
crates/gwen-core/tests/: allocator_tests.rs  build_tools_test.rs  bulk_ops_layout.rs  component_tests.rs  entity_tests.rs  extended_tests.rs  integration_tests.rs  physics3d_extended_tests.rs  query_tests.rs  transform_propagation.rs  wasm_bindgen_tests.rs
crates/gwen-physics3d-fracture/: Cargo.toml
crates/gwen-physics3d-fracture/src/: fracture_tests.rs  lib.rs
crates/gwen-physics3d-fracture/tests/: fracture.rs
crates/gwen-wasm-utils/: Cargo.toml
crates/gwen-wasm-utils/src/: buffer.rs  buffer_tests.rs  channel.rs  channel_tests.rs  debug.rs  lib.rs  ring.rs  ring_tests.rs
docs/: index.md
docs/.vitepress/: config.ts
docs/advanced/: debug-mode.md  error-bus.md  hooks.md  tween.md  vite-config.md
docs/api/: app.md  camera-core.md  core.md  kit.md  math.md  physics2d.md  physics3d-fracture.md  physics3d.md  renderer-core.md  schema.md  vite.md
docs/essentials/: actors.md  architecture.md  components.md  engine.md  layouts.md  prefabs.md  scene-router.md  scenes.md  systems.md
docs/fr/: index.md
docs/fr/advanced/: debug-mode.md  error-bus.md  hooks.md  tween.md  vite-config.md
docs/fr/api/: app.md  camera-core.md  core.md  kit.md  math.md  physics2d.md  physics3d-fracture.md  physics3d.md  renderer-core.md  schema.md  vite.md
docs/fr/essentials/: actors.md  architecture.md  components.md  engine.md  layouts.md  prefabs.md  scene-router.md  scenes.md  systems.md
docs/fr/guide/: installation.md  project-structure.md  quick-start.md  what-is-gwen.md
docs/fr/kit/: composing.md  custom-module.md  custom-plugin.md  custom-renderer.md  overview.md
docs/fr/physics/: physics2d-composables.md  physics3d-composables.md
docs/fr/rendering/: viewports.md
docs/guide/: installation.md  project-structure.md  quick-start.md  what-is-gwen.md
docs/kit/: composing.md  custom-module.md  custom-plugin.md  custom-renderer.md  overview.md
docs/physics/: physics2d-composables.md  physics3d-composables.md
docs/rendering/: viewports.md
internals-docs/: README.md  architecture.md  contributing.md  crate-builds.md  local-registry.md  renderer-system.md
scripts/: build-wasm-tools.sh  build-wasm.sh  check-wasm-sizes.sh  clean-cargo.sh  verdaccio-publish.sh  verify-memory-layout.mjs
